--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Styles/styles.css" />
     <title> University Residence Management System Dashboard</title>
 </head>
 <body>
-    
+    <script src="./JS_files/script.js"></script>
 </body>
 </html>
