--- a/maintenance_requests.html
+++ b/maintenance_requests.html
@@ -22,6 +22,13 @@
             <i class="fas fa-bars"></i>
           </button>
         </div>
+
+        <div class="date-Time">
+          <p class="date">Date</p>
+          <p class="current-time">Time</p>
+        </div>
+
+
         <nav id="sidebar-menu" class="md:block hidden">
           <ul class="space-y-2">
             <li>
