--- a/room_management.html
+++ b/room_management.html
@@ -18,9 +18,15 @@
       >
         <div class="flex items-center justify-between mb-6 md:justify-start">
           <h1 class="text-lg font-bold">Dashboard</h1>
+          
+
           <button id="menu-toggle" class="md:hidden text-white">
             <i class="fas fa-bars"></i>
           </button>
+        </div>
+        <div class="date-Time">
+          <p id="date">Date</p>
+          <p id="current-time">Time</p>
         </div>
         <nav id="sidebar-menu" class="md:block hidden">
           <ul class="space-y-2">
