--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
-  <body class="bg-gray-100 text-gray-900 flex flex-col min-h-screen">
+  <body
+    class="bg-gray-100 dark:bg-gray-800 text-gray-900 flex flex-col min-h-screen"
+  >
     <div class="flex flex-1 flex-col md:flex-row">
       <!-- Sidebar -->
       <aside
-        class="w-full md:w-64 bg-blue-500 text-white h-auto md:h-screen p-4"
+        class="w-full md:w-64 bg-blue-500 text-white dark:text-gray-700 h-auto md:h-screen p-4"
       >
         <div class="flex items-center justify-between mb-6 md:justify-start">
           <h1 class="text-lg font-bold">Dashboard</h1>
@@ -32,7 +34,7 @@
             <li>
               <a
                 href="#home"
-                class="flex items-center p-2 bg-white text-blue-500 rounded"
+                class="flex items-center p-2 bg-white dark:bg-gray-600 text-blue-500 rounded"
               >
                 <i class="fas fa-chart-bar mr-2 text-blue-500"></i> Statistics
               </a>
@@ -40,7 +42,7 @@
             <li>
               <a
                 href="room_management.html"
-                class="flex items-center p-2 bg-white text-blue-500 rounded"
+                class="flex items-center p-2 bg-white dark:bg-gray-600 text-blue-500 rounded"
               >
                 <i class="fas fa-door-open mr-2 text-blue-500"></i> Room
                 Management
@@ -49,7 +51,7 @@
             <li>
               <a
                 href="maintenance_requests.html"
-                class="flex items-center p-2 bg-white text-blue-500 rounded"
+                class="flex items-center p-2 bg-white dark:bg-gray-600 text-blue-500 rounded"
               >
                 <i class="fas fa-tools mr-2 text-blue-500"></i> Maintenance
                 Requests
@@ -58,7 +60,7 @@
             <li>
               <a
                 href="notifications.html"
-                class="flex items-center p-2 bg-white text-blue-500 rounded"
+                class="flex items-center p-2 bg-white dark:bg-gray-600 text-blue-500 rounded"
               >
                 <i class="fas fa-bell mr-2 text-blue-500"></i> Notifications
               </a>
@@ -69,35 +71,41 @@
       <!-- Main content -->
       <div class="flex-1">
         <header
-          class="bg-blue-600 text-white p-4 flex items-center justify-between"
+          class="bg-blue-600 text-white dark:text-gray-700 p-4 flex items-center justify-between"
         >
           <h1 class="text-lg font-bold">Student Resident Dashboard</h1>
           <div class="flex items-center">
             <a
               href="notifications.html"
-              class="mr-4 p-2 bg-gray-100 text-blue-600 rounded-full"
+              class="mr-4 p-2 bg-gray-100 dark:bg-gray-600 text-blue-600 rounded-full"
             >
               <i class="fas fa-bell"></i>
             </a>
-            <label for="theme-toggle" class="flex items-center cursor-pointer">
+            <label
+              id="theme-toggle"
+              class="flex items-center cursor-pointer"
+              onclick=""
+            >
               <div class="relative">
                 <input id="theme-toggle" type="checkbox" class="sr-only" />
-                <div
-                  class="w-10 h-4 bg-gray-400 rounded-full shadow-inner"
-                ></div>
-                <div
-                  class="dot absolute w-6 h-6 bg-white rounded-full shadow -left-1 -top-1 transition"
-                ></div>
+                <div class="sun cursor-pointer dark:text-gray-700">
+                  <i class="fa-regular fa-sun"></i>
+                </div>
+                <div class="moon cursor-pointer dark:text-gray-700">
+                  <i class="fa-regular fa-moon"></i>
+                </div>
               </div>
             </label>
           </div>
         </header>
-        <main class="p-4 bg-gray-100 flex-1">
+        <main class="p-4 bg-gray-100 dark:bg-gray-700 flex-1">
           <section id="home">
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4"
             >
-              <div class="bg-white p-4 rounded-lg shadow flex items-center">
+              <div
+                class="bg-white dark:bg-gray-600 p-4 rounded-lg shadow flex items-center"
+              >
                 <i class="fas fa-users fa-2x text-blue-500"></i>
                 <div class="ml-4">
                   <h3 class="text-lg font-semibold text-blue-500">
@@ -106,7 +114,9 @@
                   <p class="text-2xl font-bold text-blue-500">150</p>
                 </div>
               </div>
-              <div class="bg-white p-4 rounded-lg shadow flex items-center">
+              <div
+                class="bg-white dark:bg-gray-600 p-4 rounded-lg shadow flex items-center"
+              >
                 <i class="fas fa-door-open fa-2x text-blue-500"></i>
                 <div class="ml-4">
                   <h3 class="text-lg font-semibold text-blue-500">
@@ -115,7 +125,9 @@
                   <p class="text-2xl font-bold text-blue-500">20</p>
                 </div>
               </div>
-              <div class="bg-white p-4 rounded-lg shadow flex items-center">
+              <div
+                class="bg-white dark:bg-gray-600 p-4 rounded-lg shadow flex items-center"
+              >
                 <i class="fas fa-tools fa-2x text-blue-500"></i>
                 <div class="ml-4">
                   <h3 class="text-lg font-semibold text-blue-500">
@@ -124,7 +136,9 @@
                   <p class="text-2xl font-bold text-blue-500">5</p>
                 </div>
               </div>
-              <div class="bg-white p-4 rounded-lg shadow flex items-center">
+              <div
+                class="bg-white dark:bg-gray-600 p-4 rounded-lg shadow flex items-center"
+              >
                 <i class="fas fa-bell fa-2x text-blue-500"></i>
                 <div class="ml-4">
                   <h3 class="text-lg font-semibold text-blue-500">
@@ -134,11 +148,13 @@
                 </div>
               </div>
             </div>
-            <div class="bg-white p-4 rounded-lg shadow">
+            <div
+              class="bg-white dark:bg-gray-600 dark:text-slate-100 p-4 rounded-lg shadow"
+            >
               <h2 class="text-xl font-semibold mb-4 text-blue-500">
                 Resident Statistics
               </h2>
-              <canvas id="myChart"></canvas>
+              <canvas id="myChart" class="dark:text-slate-100"></canvas>
             </div>
           </section>
           <section id="room-management" class="hidden">
@@ -151,7 +167,9 @@
             <!-- Notification content -->
           </section>
         </main>
-        <footer class="bg-gray-200 text-gray-900 p-4 text-center">
+        <footer
+          class="bg-gray-200 dark:bg-gray-800 dark:text-white text-gray-900 p-4 text-center"
+        >
           <p>&copy; 2024 Student Resident Dashboard</p>
         </footer>
       </div>
