light & dark mode

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           </button>
         </div>
         <div class="date-Time">
-          <p class="date">Date</p>
-          <p class="current-time">Time</p>
+          <p id="date"></p>
+          <p id="current-time"></p>
         </div>
         <nav id="sidebar-menu" class="md:block hidden">
           <ul class="space-y-2">
