--- a/maintenance_requests.html
+++ b/maintenance_requests.html
@@ -22,13 +22,10 @@
             <i class="fas fa-bars"></i>
           </button>
         </div>
-
         <div class="date-Time">
-          <p class="date">Date</p>
-          <p class="current-time">Time</p>
+          <p id="date"></p>
+          <p id="current-time"></p>
         </div>
-
-
         <nav id="sidebar-menu" class="md:block hidden">
           <ul class="space-y-2">
             <li>
