--- a/room_management.html
+++ b/room_management.html
@@ -25,8 +25,8 @@
           </button>
         </div>
         <div class="date-Time">
-          <p id="date">Date</p>
-          <p id="current-time">Time</p>
+          <p id="date"></p>
+          <p id="current-time"></p>
         </div>
         <nav id="sidebar-menu" class="md:block hidden">
           <ul class="space-y-2">
@@ -83,14 +83,10 @@
             <label for="theme-toggle" class="flex items-center cursor-pointer">
               <div class="relative">
                 <input id="theme-toggle" type="checkbox" class="sr-only" />
-                <div
-                  class="w-10 h-4 bg-gray-400 rounded-full shadow-inner"
-                ></div>
-                <div
-                  class="dot absolute w-6 h-6 bg-white rounded-full shadow -left-1 -top-1 transition"
-                ></div>
+                <i id="theme-icon" class="fa-regular fa-sun"></i>
               </div>
             </label>
+            
           </div>
         </header>
         <main class="flex-1 p-4 bg-gray-100">
